Adding logic for event types, menu types and catering types
